--- a/style/main.css
+++ b/style/main.css
@@ -21,21 +21,19 @@ body, html {
   overflow-y: auto;
 }
 
-#panel h2 {
-  margin-top: 0;
-  color: #2c3e50;
+#chart-box {
+  background: white;
+  padding: 10px;
+  max-width: 400px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  border-radius: 10px;
 }
+
 
 #panel p {
   color: #555;
   font-size: 14px;
 }
 
-canvas {
-  margin-top: 20px;
-  max-width: 100%;
-}
 
-.leaflet-popup-content {
-  font-size: 14px;
-}
+
