--- a/style/main.css
+++ b/style/main.css
@@ -1,1 +1,24 @@
 
+<style>
+  #report-box {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+    display: none;
+    background: #d5e6de;
+    padding: 12px;
+    border-radius: 10px;
+    width: 260px;
+    height: 450px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
+    font-family: sans-serif;
+  }
+
+  input[type="text"], textarea {
+    font-size: 12px;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+    padding: 4px;
+  }
+</style>
